Upgrade to Java 26.