@@ -16,8 +16,8 @@
 
     <licenses>
         <license>
-            <name>MIT License</name>
-            <url>https://opensource.org/licenses/MIT</url>
+            <name>GPL License</name>
+            <url>https://opensource.org/licenses/GPL</url>
         </license>
     </licenses>
 
@@ -38,7 +38,7 @@
 
     <properties>
         <!-- Java version -->
-        <java.version>25</java.version>
+        <java.version>26</java.version>
         <maven.compiler.release>${java.version}</maven.compiler.release>
 
         <!-- Encoding -->
@@ -46,21 +46,21 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
         <!-- JavaFX version -->
-        <javafx.version>25</javafx.version>
+        <javafx.version>26</javafx.version>
 
         <!-- Plugin versions -->
-        <maven-compiler-plugin.version>3.14.0</maven-compiler-plugin.version>
-        <maven-surefire-plugin.version>3.5.3</maven-surefire-plugin.version>
-        <maven-failsafe-plugin.version>3.5.3</maven-failsafe-plugin.version>
-        <maven-jar-plugin.version>3.4.2</maven-jar-plugin.version>
-        <maven-source-plugin.version>3.3.1</maven-source-plugin.version>
-        <maven-javadoc-plugin.version>3.11.2</maven-javadoc-plugin.version>
+        <maven-compiler-plugin.version>3.15.0</maven-compiler-plugin.version>
+        <maven-surefire-plugin.version>3.5.5</maven-surefire-plugin.version>
+        <maven-failsafe-plugin.version>3.5.5</maven-failsafe-plugin.version>
+        <maven-jar-plugin.version>3.5.0</maven-jar-plugin.version>
+        <maven-source-plugin.version>3.4.0</maven-source-plugin.version>
+        <maven-javadoc-plugin.version>3.12.0</maven-javadoc-plugin.version>
         <javafx-maven-plugin.version>0.0.8</javafx-maven-plugin.version>
 
         <!-- Test dependency versions -->
-        <junit.version>5.11.4</junit.version>
+        <junit.version>6.0.3</junit.version>
         <assertj.version>3.27.7</assertj.version>
-        <mockito.version>5.15.2</mockito.version>
+        <mockito.version>5.23.0</mockito.version>
     </properties>
 
     <dependencyManagement>
@@ -155,6 +155,10 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>${maven-surefire-plugin.version}</version>
+					<configuration>
+						<!-- Allow native access for all unnamed modules -->
+						<argLine>--enable-native-access=ALL-UNNAMED</argLine>
+					</configuration>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
